<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="_65">+65</string>
    <string name="group_size">Group Size:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="smoking">Smoking:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="book">Book</string>
    <string name="reset">Reset</string>
</resources>